SaveGame
implementazione del saveGame